--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>	
-	<header class="mt25">
+	<header class="mt25" id="home">
 		<div class="container">
 			<img src="img/cover.png">		 
 		</div>
@@ -16,7 +16,7 @@
 	<nav class="navbar">
 		<div class="container">
 			<ul class="nav_lists">
-				<li><a href="#">Home</a></li>
+				<li><a href="#home">Home</a></li>
 				<li><a href="#aboutme">About Me</a></li> 
 				<li><a href="#audio">Audio</a></li>
 				<li><a href="#routine">College Routine</a></li>
